---------------------------------------------------
Legend :	+=addition		*=change	!=bug	
---------------------------------------------------

V1.7.3
------
+ double clicking on pattern highlights that track (pooplog)
+ new file format fixing a lot of problems, and incorporating lossless data compression (pooplog)
+ 64 tracks available! (might break some machines?) (pooplog)
* better memory management of pattern data (up to 10mb savings) (pooplog)
* optimized machine indexing (pooplog)
! sampler doesn't crash when no instrument is specified any more (pooplog)
! save as - pick an existing song, and it now asks if it is ok to overwrite (pooplog)
! error messages on file read/write problems (pooplog)
! vsts don't immediately crash psycle when they give an exception on save/load any more (pooplog)


V1.7.1
------

+ Added option (not) to loop the Song/block at the end.
+ (NEEDS TESTING!)Added "mcm" option in the MidiInput dialog, to record midi commands directly.
! Crash bug when opening the minimixer when it had connected machines with a name of 15 letters.
! New default size not working with the keyboard shortcut of moving next (which adds a new pattern)
! Values not being shown when adding them at the last line of pattern, with wrap around disabled.
! Play block now does work correctly
! Fixed Saving to wav. options "save pattern" and "save sequence position" didn't ever stop.


V1.7RC6
-------

+ Tweak Slide command. Slides a Tweak to make it smoother.
+ Psycle now creates a log of the loaded plugins at start, to help you know which one made it crash, if any.
+ Implemented "Exchange" button in Gear Rack and added Instruments as well.
* Speeded up some of the internals thanks to Dan.
! Fixed the Crashes reported by people when opening the Settings dialog (Happened in Win9X systems
  with many fonts)
! Fixed a problem with Tweak recording with VST's with Native GUI.
! Fixed bug with some VST's not playing the first note.